[project]
name = "cync-lights"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kartik Moudgil", email = "mail@kartik.one" }
]
dependencies = [
    "homeassistant>=2024.5.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cync_lights"]
